--- a/project/.gitignore
+++ b/project/.gitignore
@@ -4,8 +4,10 @@ CMakeFiles
 CMakeScripts
 Testing
 Makefile
+build
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+.vscode
